<resources>
    <string name="app_name">Courier</string>
    <string name="courier_power_by_kadabra">Powered by kadabra</string>
    <string name="no_results">No data available .</string>
    <string name="error_login_server_error">Server not responding.</string>
    <string name="error_login_server_unknown_error">Unknown Error.</string>
    <string name="title_activity_maps">Map</string>
    <string name="no_internet">No internet connection</string>
    <string name="error_user_name">User name can\'t be empty</string>
    <string name="error_email">Enter a valid email.</string>

    <string name="error_password">Password can\'t be empty</string>
    <string name="error_email_password_incorrect">Password or Email is incorrect Kindly check them again.</string>
    <string name="error_incorrect_user_name">Incorrect User Name.</string>
    <string name="error_incorrect_password">Incorrect Password.</string>

    <string name="skip_now">Skip now</string>
    <string name="email">Email</string>
    <string name="code">Code</string>
    <string name="missing">Missing</string>
    <string name="required">Required</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="error_invalid_email">Invalid email address</string>
    <string name="error_email_not_registered">The email is not registered</string>
    <string name="success">Success</string>
    <string name="error_network">Network Error.</string>
    <string name="error_firebase_sign">Fire base SignUp Error.</string>

    <string name="log_in">Log in</string>
    <string name="crash_error">Sorry!, Something went wrong, we will fixing it soon.</string>
    <string name="restart">Restart</string>
    <string name="loading">Loading...</string>
    <string name="end_task">END TASK</string>
    <string name="accept_task">ACCEPT </string>
    <string name="start_task">Start Task </string>


    <string name="exit">Are you sure you want to exit?</string>
    <string name="action_geolocate">Pick Place</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="no_tasks_available">No Tasks Available</string>
    <string name="task_description">Task Description</string>
    <string name="to">To:</string>
    <string name="from">From:</string>
    <string name="no_stop">No location determined.</string>
    <string name="google_map_key">AIzaSyAjSI0GYuAh0RwtltIluYsds4pU7O_dvtc</string>
    <string name="kadabra">Kadabra</string>
    <string name="amount">Amount</string>
    <string name="le">LE</string>
    <string name="task_details">Task Details</string>
    <string name="Permission">Permission</string>
    <string name="launch_activity">Open</string>
    <string name="location_updated">Location Updated: %1$s</string>
    <string name="remove_location_updates">Remove location updates</string>
    <string name="error_location_permission_required">Location Permission is required to obtain location.</string>
    <string name="error_no_location_permission_gived">You did not give permissions to get location</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="ok">ok</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>


    <string name="settings">Settings</string>
    <string name="update">Update</string>
    <string name="please_update">Please Update Your App</string>
    <string name="msg_end_task">Please Start this task before end it.</string>
    <string name="msg_end">Are you sure you want end this task?.</string>


    <string name="update_now">Update Now</string>
    <string name="you_are_here">You ar here!</string>
    <string name="welcome">Welcome</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="confirm">Confirm</string>
    <string name="stops">Stops</string>
    <string name="stop_name">Stop Name</string>
    <string name="end_first">You must end the opened task first.</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="warning">Warning</string>
    <string name="info">Choose</string>
    <string name="map_option">Choose Map Option</string>
    <string name="map_title">Select option to open map with.</string>
    <string name="cancel">Cancel</string>
    <string name="google_map">Google Map</string>
    <string name="login_another_device">Your Account is Logging from a new Device.</string>
    <string name="channel_id">123456</string>
    <string name="error_google_ervice">You can\'t make map request,Please first download google services.</string>
    <string name="error_gps_required">This application requires GPS to work properly, do you want to enable it?</string>
    <string name="error_mock_location">Please stop any app deceiving Location App first to use program.</string>
    <string name="error_gps">This application requires GPS to work properly,Please enable it.</string>
    <string name="beta_version">Beta Version</string>
    <string name="status">Status</string>
    <string name="nav_task">Your Tasks</string>
    <string name="nav_notification">Notification</string>
    <string name="nav_task_history">Task History</string>
    <string name="nav_setting">Settings</string>
    <string name="nav_call">Call Agent</string>
    <string name="nav_wallet">Wallet</string>
    <string name="nav_logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="notification">Notification</string>
    <string name="notification_details">Notification Details</string>
    <string name="tasks_history">Tasks History</string>
    <string name="in_progress">In Progress</string>
    <string name="waiting">Waiting For Pickup</string>
    <string name="started">Started</string>
    <string name="ready_to_start">Ready to start</string>
    <string name="cancelled">Cancelled</string>

    <string name="new_task">New</string>
    <string name="completed">Completed</string>
    <string name="total_completed">Total Completed</string>
    <string name="unread">Unread</string>
    <string name="choose_language">Choose Language</string>
    <string name="duration">Duration: </string>
    <string name="distance">Distance: </string>
    <string name="trip">"Trip # </string>
    <string name="km">km</string>
    <string name="fastest_route">Fastest route now due to traffic conditions</string>
    <string name="start">Start</string>
    <string name="day">Day </string>
    <string name="hour">hour </string>
    <string name="minutes">mins </string>
    <string name="error_calculate_distance">Can\'t find a way there.</string>
    <string name="error_no_audio">No audio message for this task.</string>
    <string name="cash">Cash</string>
    <string name="wallet">Wallet</string>
    <string name="Credit">Credit</string>
    <string name="no_collection">No Collection</string>
    <string name="enter_total">Choose Payment Method</string>
    <string name="error_enter_total">Please Enter the total Cash.</string>
    <string name="display_receipt">Display Receipt</string>
 <string name="error_total">Wrong Total Cost Value.</string>
    <string name="total">Total:</string>
 <string name="message_choose">Please choose the payment type.</string>
    <string name="error_edit_task">This task cant be closed unless you confirm the new changes.Press accept.</string>
    <string name="agent_name">Agent Name</string>
    <string name="error_agent_phone">This agent has no phone no.</string>
    <string name="error_end">This Task Already Ended Before.</string>
    <string name="error_wallet">You Don\'t Have enough Balance In Wallet.</string>
    <string name="error_credit">You don\'t have Credit card in kadabra.</string>
    <string name="error_confirm">This task can not be closed unless you confirm the new changes.Press accept.</string>




</resources>
