<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        android:scrollbars="none">

        <requestFocus />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/rlParentData"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/colorSecondary"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/ivPaymentBack"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="12dp"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    app:srcCompat="@drawable/ic_back" />/>

                <TextView
                    android:id="@+id/tvServiceCost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="12dp"
                    android:text="@string/enter_total"
                    android:textAllCaps="false"
                    android:textColor="@color/colorLabel"
                    android:textSize="18sp" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/rlParentData">

                <TextView
                    android:id="@+id/tvReceiptDetails"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="25dp"
                    android:gravity="center_vertical"
                    android:text="@string/display_receipt"
                    android:drawableEnd="@drawable/ic_down"
                    android:textColor="@color/colorPrimary"
                    />

                <RelativeLayout
                    android:id="@+id/rlParent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvReceiptDetails">


                    <RadioGroup
                        android:id="@+id/rgLanguage"
                        android:layout_width="wrap_content"
                        android:layout_height="200dp"
                        android:layout_below="@+id/etPasswordLayout"
                        android:layout_margin="25dp"
                        android:checkedButton="@+id/rbArabic"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/rbCash"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:text="@string/cash" />

                        <RadioButton
                            android:id="@+id/rbWallet"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:text="@string/wallet" />

                        <RadioButton
                            android:id="@+id/rbCredit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:text="@string/Credit" />

                        <RadioButton
                            android:id="@+id/rbNoCollection"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:text="@string/no_collection"
                            />


                    </RadioGroup>

                    <EditText
                        android:id="@+id/etAmount"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginEnd="25dp"
                        android:layout_marginBottom="25dp"
                        android:layout_toEndOf="@+id/rgLanguage"
                        android:gravity="center|center_horizontal|center_vertical"
                        android:hint="@string/le"
                        android:imeOptions="actionDone"
                        android:inputType="numberDecimal"
                        android:selectAllOnFocus="true"
                        android:textSize="25sp"
                        android:visibility="invisible" />
                </RelativeLayout>

                <Button
                    android:id="@+id/btnPaymentEndTask"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rlParent"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/rounded_button"
                    android:text="@string/end_task"
                    android:textAllCaps="false"
                    android:textColor="@color/colorSecondary"
                    android:textSize="20sp" />
            </RelativeLayout>


        </RelativeLayout>
    </ScrollView>
</RelativeLayout>