<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"

    app:cardBackgroundColor="@color/colorPrimary">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >


        <ImageView
            android:id="@+id/ivProductImage"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder" />
        <!--</android.support.v7.widget.CardView>-->

        <TextView
            android:id="@+id/tvTaskName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/ivProductImage"
            android:layout_toRightOf="@+id/ivProductImage"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="1"
            android:text="@string/kadabra"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tvAgentName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTaskName"
            android:layout_alignStart="@+id/tvTaskName"
            android:layout_alignLeft="@+id/tvTaskName"
            android:layout_marginTop="10dp"
            android:text="Agent Name"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tvPickupLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvAgentName"
            android:layout_alignStart="@+id/tvTaskAmount"
            android:layout_alignLeft="@+id/tvTaskAmount"
            android:layout_marginTop="10dp"
            android:text="@string/from"
            android:textColor="@color/white"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tvDropOffLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPickupLocation"
            android:layout_alignStart="@+id/tvTaskName"
            android:layout_alignLeft="@+id/tvTaskName"
            android:layout_marginTop="10dp"
            android:text="@string/to"
            android:textColor="@color/white"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tvTaskAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvDropOffLocation"
            android:layout_alignStart="@+id/tvTaskName"
            android:layout_alignLeft="@+id/tvTaskName"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/le"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/status"
            android:textColor="@color/white"
            android:textSize="11sp"
            android:textStyle="bold|italic" />

    </RelativeLayout>


</androidx.cardview.widget.CardView>
