<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:id="@+id/rlParent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:fitsSystemWindows="true"
            android:scrollbars="none">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorSecondary"
                android:orientation="vertical"
                android:padding="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:text="@string/welcome"
                        android:textAlignment="center"
                        android:textColor="@color/textColor"
                        android:textSize="30sp" />

                </RelativeLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/etUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/user_name"
                        android:inputType="textEmailAddress"
                        android:selectAllOnFocus="true"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="24dp"
                        android:imeOptions="actionNext"/>

                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="24dp"
                        android:selectAllOnFocus="true"
                        android:imeOptions="actionDone"/>

                    <Button
                        android:id="@+id/btnLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="40dp"
                        android:layout_marginEnd="24dp"
                        android:background="@drawable/rounded_button"
                        android:text="@string/login"
                        android:textColor="@color/colorSecondary" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>
        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/avi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:indicatorName="BallScaleRippleIndicator"
            android:layout_centerInParent="true"
            android:visibility="invisible"
            style="@style/AVLoadingIndicatorView"
            app:indicatorColor="@color/colorPrimary"
            />
    </RelativeLayout>

</layout>